--- a/html_project_cse.html
+++ b/html_project_cse.html
@@ -18,7 +18,7 @@
           </a>
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
             <a href="index.html" class="mr-5 hover:text-gray-900">Home</a>
-            <a class="mr-5 hover:text-gray-900htmlproject_department.html" >Departments</a>
+            <a class="mr-5 hover:text-gray-900"herf="htmlproject_department.html" >Departments</a>
             <a class="mr-5 hover:text-gray-900"href="htmlprojectlibrary.html">Library</a>
             <a class="mr-5 hover:text-gray-900" href="htmlprojectevents.html">Events</a>
             <a class="mr-5 hover:text-gray-900" href="htmlprojectaboutus.html">Contact us</a>
